aws-workshop-webapp-svc/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-flask-backend
  namespace: aws-workshop-webapp-svc
  annotations:
    nginx.ingress.kubernetes.io/healthcheck-path: "/contents/aws"
spec:
  selector:
    app: demo-flask-backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: demo-nodejs-backend
  namespace: aws-workshop-webapp-svc
  annotations:
    nginx.ingress.kubernetes.io/healthcheck-path: "/contents/aws"
spec:
  selector:
    app: demo-nodejs-backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
      
---
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
  namespace: aws-workshop-webapp-svc
  annotations:
    nginx.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: demo-frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
